src/objects/CustomerStory__c/CustomerStory__c.object-meta.xml
<CustomObject>
    <label>CustomerStory</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerStories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>