src/objects/CustomerStory__c/fields/Files_Links_1__c.field-meta.xml
<CustomField>
    <fullName>Files_Links_1__c</fullName>
    <description>Enter PDF Link</description>
    <label>PDF Link</label>
    <type>Url</type>
</CustomField>