src/objects/CustomerStory__c/fields/Files_Links_2__c.field-meta.xml
<CustomField>
    <fullName>Files_Links_2__c</fullName>
    <label>Video Link - Windows</label>
    <type>Url</type>
</CustomField>