src/objects/CustomerStory__c/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <formula>Related_Opportunity__r.Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make/Model</label>
    <type>Text</type>
</CustomField>