src/objects/CustomerStory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For RTCustomer story project</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CustomerStories (Product)</relationshipLabel>
    <relationshipName>CustomerStories</relationshipName>
    <type>Lookup</type>
</CustomField>