src/objects/CustomerStory__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>Product__r.Product_Line__c</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>