src/objects/CustomerStory__c/fields/Region1__c.field-meta.xml
<CustomField>
    <fullName>Region1__c</fullName>
    <description>Selecting  Region value</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMEAI</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>HGROWTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>