src/objects/CustomerStory__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CustomerStories</relationshipLabel>
    <relationshipName>CustomerStories</relationshipName>
    <type>Lookup</type>
</CustomField>