src/objects/CustomerStory__c/fields/Sales_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reference__c</fullName>
    <inlineHelpText>This picklist will determine what image shows up for the &quot;Use Contact As Reference?&quot;</inlineHelpText>
    <label>Sales Reference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>