src/objects/CustomerStory__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATR</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>