src/objects/CustomerStory__c/fields/Sharing_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Restriction__c</fullName>
    <inlineHelpText>This picklist will determine the image that shows up for &quot;Able to Mention Customer Name?&quot;</inlineHelpText>
    <label>Sharing Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Educational Use Only - Do Not Mention Customer Name</fullName>
                <default>true</default>
                <label>Educational Use Only - Do Not Mention Customer Name</label>
            </value>
            <value>
                <fullName>Approved for External Use - OK to Mention Customer Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>