src/objects/CustomerStory__c/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <label>Story</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>