src/objects/CustomerStory__c/fields/Story_Owner__c.field-meta.xml
<CustomField>
    <fullName>Story_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Story Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerStories</relationshipName>
    <type>Lookup</type>
</CustomField>