src/objects/CustomerStory__c/fields/Story_Type__c.field-meta.xml
<CustomField>
    <fullName>Story_Type__c</fullName>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>