src/objects/CustomerStory__c/fields/Win_Again__c.field-meta.xml
<CustomField>
    <fullName>Win_Again__c</fullName>
    <label>Win Against</label>
    <length>180</length>
    <type>Text</type>
</CustomField>