src/objects/CustomerStory__c/fields/Win_Against__c.field-meta.xml
<CustomField>
    <fullName>Win_Against__c</fullName>
    <label>Win Against</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor 1</fullName>
            </value>
            <value>
                <fullName>Competitor 2</fullName>
            </value>
            <value>
                <fullName>Competitor 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>