src/objects/CustomerStory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Story_Type__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Region1__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>